--- a/Flex Layout.html
+++ b/Flex Layout.html
@@ -16,19 +16,19 @@
             <article class="child">
                 <h2>Article 1</h2>
                 <p>Article 1 content. What a cool article!</p>
-                <img src="picture.png" class="articleImage">
+                <img src="picture.png" class="articleImage" alt="a wizard at a desk">
             </article>
 
             <article class="child">
                 <h2>Article 2</h2>
                 <p>Article 2 content. This one is bad.</p>
-                <img src="picture.png" class="articleImage">
+                <img src="picture.png" class="articleImage" alt="a wizard at a desk">
             </article>
 
             <article class="child">
                 <h2>Article 3</h2>
                 <p>Article 3 content. This article is weird.</p>
-                <img src="picture.png" class="articleImage">
+                <img src="picture.png" class="articleImage" alt="a wizard at a desk">
             </article>
         </main>
     </body>
